--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=product
-spring.data.mongodb.uri=mongodb://localhost:27017/ProductDB
+#spring.data.mongodb.uri=mongodb://localhost:27017/ProductDB
+spring.data.mongodb.uri=spring.data.mongodb.uri=mongodb://<user>:<pass>@mongo:27017/productdb?authSource=admin
 server.port=9090
