--- a/k8s/product-deployment.yaml
+++ b/k8s/product-deployment.yaml
@@ -19,7 +19,7 @@ spec:
             - containerPort: 9090  # ✅ Updated to 9090
           env:
             - name: SPRING_DATA_MONGODB_URI
-              value: mongodb://$(MONGO_USERNAME):$(MONGO_PASSWORD)@mongo-service:27017/productdb?authSource=admin
+              value: mongodb://$(MONGO_USERNAME):$(MONGO_PASSWORD)@mongo:27017/productdb?authSource=admin
             - name: MONGO_USERNAME
               valueFrom:
                 configMapKeyRef:
