--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=product
 #spring.data.mongodb.uri=mongodb://localhost:27017/ProductDB
-spring.data.mongodb.uri=mongodb://root:<pass>@mongo:27017/productdb?authSource=admin
+spring.data.mongodb.uri=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@mongo:27017/productdb?authSource=admin
+
 server.port=9090
