--- a/k8s/product-deployment.yaml
+++ b/k8s/product-deployment.yaml
@@ -3,7 +3,12 @@ kind: Deployment
 metadata:
   name: product-service
 spec:
-  replicas: 1
+  replicas: 4
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   selector:
     matchLabels:
       app: product
